tests/types/tyfun/error02.out
error02.ml[4:1 ..4:15]: error (E2003)
  │ 
4 │ let () = foo ()
  │ ^^^^^^^^^^^^^^^
  Stuck type expression in Amc.type_error: foo int
